# otus_cpp_prof_hw6

./: README.md
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  main.cpp  matrix.h  matrix.ipp
